# pegasus

./: Cargo.toml  rustfmt.toml
sample/: jfk.json  jfk_full.json
src/: main.rs
src/app/: errors.rs  mod.rs
src/cli/: mod.rs
src/config/: errors.rs  mod.rs
src/files/: errors.rs  mod.rs  operations.rs  temporary.rs
src/input/: errors.rs  mod.rs  transcription.rs
src/llm/: client.rs  errors.rs  mod.rs  prompts.rs  request.rs  response.rs
src/logging/: mod.rs
src/network/: errors.rs  mod.rs
src/output/: format.rs  mod.rs
