[package]
name = "pegasus"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
chrono = "0.4.42"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "process",
] }

[lints.clippy]
needless_return = "allow"
