[package]
name = "pegasus"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
toml = "0.9.11"
xdg = "3.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.138"
chrono = "0.4.42"
reqwest = { version = "0.13.1", features = ["json"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "process",
] }

[lints.clippy]
needless_return = "allow"
upper_case_acronyms = "allow"
